methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:44: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
  if (getGroundColor()== c:Color) {
                      ^SlugSnail:44: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
  if (getGroundColor()== c:Color) {
                          ^